# vimly

./: .gitignore  CNAME  LICENSE  README.md  about.html  about.rst  index.html  privacy.html  privacy.rst  sitemap.xml  subscribe-free.html  subscribe-free.rst  subscribe-pro.html  subscribe-pro.rst  tos.html  tos.rst  vimly.cabal
course/en/: 2017-08-18-vim.html  2017-08-18-vim.rst  vim.html  vim.rst
slide/: league.css  linux-day-2017.html  vimberlin.html
src/: Abbreviations.lhs  Config.hs  JFilters.lhs  Multilang.hs  site.hs
static/: example.html
static/css/: turretcss.min.css  vimly-style.css
templates/: default.html  facebook.html  mailchimp.html  payments-draft.html  payments.html  post-list.html  sitemap.xml
templates/en/: archive.html  donation.html
templates/it/: archive.html  donation.html  post.html
