name:               vimly
version:            0.1.0.0
synopsis:           Big wins come from little things
description:        A New Way of Learning The Vim Manual Directly in Your Inbox
homepage:           http://vimly.info
license:            AllRightsReserved
author:             Giacomo Mantani
maintainer:         starly.info@gmail.com
copyright:          Giacomo Mantani
category:           Web
build-type:         Simple
cabal-version:      >= 1.10
source-repository head
  type: git
  location: git@github.com:vimly/vimly.git

executable vimly
  main-is:          site.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -threaded -Wall
  other-modules:    Abbreviations
                    , Config
                    , Multilang
                    , JFilters
  build-depends:    base == 4.*
                  , containers
                  , filepath
                  , hakyll
                  , pandoc
                  , old-locale
